--- a/app/templates/dash/members.html
+++ b/app/templates/dash/members.html
@@ -13,15 +13,15 @@
                     <a href="{{ url_for('user.profile', id=member.id) }}"
                        class="flex items-center gap-4 p-2">
                         <div class="w-12 h-12">
-                            {% if member['image_data'] %}
+                            {% if member.profile['image_data'] %}
                                 <img class="aspect-square rounded-full"
                                      width="48px"
                                      height="48px"
-                                     src="{{ member['image_data'] }}"
+                                     src="{{ member.profile['image_data'] }}"
                                      alt="image representing the user called {{ member['username'] }}" />
                             {% else %}
-                                <div class="bg-gray-700 child h-full">
-                                    <img class="aspect-square rounded-full"
+                                <div class="bg-gray-700 child h-full rounded-full">
+                                    <img class="aspect-square"
                                          width="48px"
                                          height="48px"
                                          src="{{ url_for('static', filename='logo.png') }}"
